# botcli

./: .gitignore  AGENTS.md  README.md  build-deploy.sh  justfile  meson.build
docs/: daemon_arch.md
src/: main.cpp  validation.hpp
tests/: request_id_test.cpp
